--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,26 @@
-#server.port=
+# Reemplaza los valores por tus variables de entorno en producción.
 
-#Configuracion de la base de datos MySQL
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql=true
-# spring.jpa.hibernate.ddl-auto=update 
+#Configuracion del servidor
+# server.port=${SERVER_PORT} # Puerto del servidor
+
+#Configuracion de la base de datos
+# spring.datasource.url=${DB_URL} # URL de la base de datos
+# spring.datasource.username=${DB_USERNAME} # Usuario de la base de datos
+# spring.datasource.password=${DB_PASSWORD} # Contraseña de la base de datos
+# spring.datasource.driver-class-name=${DB_DRIVER} # Driver de la base de datos
+# spring.jpa.database-platform=${DB_DIALECT} # Dialecto de la base de datos
+# spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO} # Acción de Hibernate al iniciar la aplicación
+# spring.jpa.show-sql=${DB_SHOW_SQL} # Mostrar SQL en la consola
+
+#Configuracion de correo
+# spring.mail.host=${MAIL_HOST} # Servidor de correo electrónico
+# spring.mail.port=${MAIL_PORT} # Puerto del servidor de correo electrónico
+# spring.mail.username=${MAIL_USERNAME} # Usuario del servidor de correo electrónico
+# spring.mail.password=${MAIL_PASSWORD} # Contraseña del servidor de correo electrónico
+# spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH} # Autenticación SMTP
+# spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS} # TLS para SMTP
+# spring.mail.properties.mail.smtp.connectiontimeout=${MAIL_SMTP_CONNECTIONTIMEOUT} # Tiempo de espera para la conexión SMTP
+# spring.mail.properties.mail.smtp.timeout=${MAIL_SMTP_TIMEOUT} # Tiempo de espera para las operaciones SMTP
+# spring.mail.properties.mail.smtp.writetimeout=${MAIL_SMTP_WRITETIMEOUT} # Tiempo de espera para escribir en el servidor SMTP
+# front.url=${FRONT_URL} # URL de la aplicación frontend
+
