--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,25 @@
-server.port=${SERVER_PORT}
+#Configuracion del servidor
+server.port=${SERVER_PORT:3000}
 
 #Configuracion de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQL_DATABASE}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER}
+spring.jpa.database-platform=${DB_DIALECT}
+spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO}
+spring.jpa.show-sql=${DB_SHOW_SQL}
+
+#Configuracion de correo
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS}
+spring.mail.properties.mail.smtp.connectiontimeout=${MAIL_SMTP_CONNECTIONTIMEOUT}
+spring.mail.properties.mail.smtp.timeout=${MAIL_SMTP_TIMEOUT}
+spring.mail.properties.mail.smtp.writetimeout=${MAIL_SMTP_WRITETIMEOUT}
+
+#Varibles generales
+front.url=${FRONT_URL}
